# chat-server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  thread.cpp
client/: ChatClient.cpp  chat_clients  main.cpp
include/: ChatClient.hpp  ChatServer.hpp  Color.hpp  Common.hpp
include/user/: User.hpp  UserManager.hpp
server/: ChatServer.cpp  main.cpp  server
user/: User.cpp  UserManager.cpp
